# cs2-autoaccept-linux

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  wayland_display.cpp  wayland_mouse.cpp
include/grim/: main.h
include/grim/include/: box.h  buffer.h  output-layout.h  render.h
src/: main.cpp  main.h  process_image.cpp  wayland_display.cpp  wayland_mouse.cpp  x11_display.cpp  x11_mouse.cpp
